# qitops-agent

./: .env.monitoring  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Enable-Monitoring.ps1  Jenkinsfile  MONITORING-GUIDE.md  MONITORING-VISUAL-GUIDE.md  MONITORING.md  Makefile  README.md  Set-MonitoringEnv.ps1  bot_part1.rs  bot_part2.rs  demo-monitoring.bat  demo-monitoring.sh  docker-compose-monitoring.yml  docker-compose.monitoring.yml  docker-compose.yml  enable-monitoring.bat  enable-monitoring.sh  install.ps1  install.sh  monitoring-setup.md  output.txt  parse_method.rs  parse_natural_language_command.patch  parse_natural_language_command.rs  parse_natural_language_command_fixed.rs  parse_natural_language_command_indented.rs  push-metrics-fixed.ps1  push-metrics.ps1  push-metrics.sh  push-simple-metrics-fixed.ps1  push-simple-metrics.ps1  push-test-metrics-fixed.ps1  push-test-metrics.ps1  push-test-metrics.sh  (+7 more)
.circleci/: config.yml
chat_sessions/: session_1744722998.json  session_1744728001.json  session_1744729531.json
docs/: CI_CD_INTEGRATION.md  CLI_README.md  CONFIGURATION.md  DEMO_SCRIPT.md  ENV_CONFIG_QUICKSTART.md  ENV_CONFIG_REFERENCE.md  FAQ.md  GITHUB_SETUP.md  PRACTICAL_EXAMPLES.md  PROJECT_BRIEF.md  QITOPS_BOT.md  QITOPS_BOT_QUICKSTART.md  QUICK_START.md  README.md  SOURCE_MANAGEMENT_CI_CD.md  TROUBLESHOOTING.md  USER_GUIDE.md  USE_CASES.md  VISUAL_GUIDE.md  monitoring.md  session.md
feedback/: feedback_1744728118.json
knowledge/: commands.json  config.json  examples.json  faq.json
sessions/: Test_Session_session.md
src/: lib.rs  main.rs  main_new.rs  update.rs
test_data/: User(id__int,_name__string,_email__string,_age__int)_data.json  _data.json  test_files_user-profile.json_data.json
test_files/: changes.diff  requirements.md  standards.md  user-profile.json  validation.js
tests/: integration_tests.rs  session_agent_test.rs  source_persona_test.rs  test_agent_traits.rs  test_cli.rs  test_llm.rs  test_llm_router.rs  test_sample.py.md  test_test_gen_agent.rs.disabled
(+66 files in other folders)
