[package]
name = "qitops-agent"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan Opperman <opperman.jonathan@gmail.com>"]
description = "QitOps Agent - An AI-powered QA Assistant"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jcopperman/qitops-agent"

[[bin]]
name = "qitops"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11.24", features = ["json"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-trait = "0.1.77"
dirs = "5.0.1"
colored = "2.0.4"
indicatif = "0.17.7"
spinner = "0.5.0"
regex = "1.10.2"
base64 = "0.21.7"

[dev-dependencies]
mockall = "0.12.1"
tokio-test = "0.4.3"
